# py-pyracmon

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  test-compose.yml
Dockerfiles/: python3.10  python3.6  python3.7  python3.8  python3.9  requirements-dist.txt  requirements.txt
docs/: .gitignore  generate.sh
docs/src/: conf.py  guide.rst  index.rst  modules.rst  tutorial.rst
docs/template/: module.rst_t  package.rst_t
examples/: graph_example.py  models.pyi
mysql/conf.d/: authentication.cnf
mysql/initdb.d/: 000-create-db.sql
mysql/schema/: create-tables.sql
postgresql/initdb.d/: 000-create-db.sql
postgresql/schema/: create-example.sql  create-tables.sql
pyracmon/: __init__.py  clause.py  config.py  connection.py  context.py  dbapi.py  marker.py  mixin.py  model.py  model_graph.py  query.py  query_graph.py  select.py  sql.py  stub.py  util.py
pyracmon/dialect/: mysql.py  postgresql.py  shared.py
pyracmon/graph/: __init__.py  graph.py  identify.py  protocol.py  schema.py  serialize.py  spec.py  template.py  typing.py  util.py
pyracmon/testing/: __init__.py  model.py  util.py
tests/: db_api.py  models.pyi  test_clause.py  test_config.py  test_connection.py  test_context.py  test_marker.py  test_mixin.py  test_mixin_execution.py  test_model.py  test_model_graph.py  test_pyracmon.py  test_query.py  test_query_graph.py  test_select.py  test_sql.py  test_util.py
tests/dialect/: test_mysql.py  test_postgresql.py  test_shared.py
tests/graph/: test_graph.py  test_identify.py  test_schema.py  (+3 more)
(+12 files in other folders)
