[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyracmon"
version = "1.0.0"
authors = [
  { name="sozuberry", email="sozuberry@gmail.com" },
]
description = "Python O/R Mapping extension for DB-API 2.0"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "typing_extensions",
]

[project.urls]
"Homepage" = "https://github.com/sozu/py-pyracmon"